Pressing shift+D while in the outliner window when selecting an object causes Blender 2.8 to shut down immediately #60248

Closed
opened 2019-01-06 23:18:50 +01:00 by Frozen_Death_Knight · 6 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia Geforce 980

Blender Version
Broken: 2.80, 2018-12-12 01:18, hash: 16fc62e15f

Worked: Making a shortcut for duplicate collection using shift+D works without any problem. Doing the same command on any object within the collection causes the program to shut down immediately.

Was trying to make new shortcuts in Blender 2.80. When I got to doing the outliner shortcuts the entire program shut down when using shift+D on an object inside the outliner window after adding a duplicate shortcut for the collections.

Exact steps for others to reproduce the error
Just open up a default scene with a cube, camera, and light source. Go to the outliner, select any of these objects, and then press shift+D. Program should be shutting down from this.

On a final note, it would be nice if you could inside the outliner use copy, paste, duplicate, and duplicate linked on any object inside the outliner like in the 3D view windows. That includes adding these into the R click window when opening up a context menu for the outliner.

Edit:

I downloaded the latest version and I still got the same problem. However, I just realized I skipped another step in the process. You in fact need to assign a shortcut command for duplicate collection by R clicking a collection, then R click again on the duplicate button, assign a hotkey, and then you click on any object in your scene and do the stuff I mentioned in the original post.

Was able to replicate this on two separate Windows computers which had Windows 7 and 10 installed respectively.

**System Information** Operating system: Windows 10 Graphics card: Nvidia Geforce 980 **Blender Version** Broken: 2.80, 2018-12-12 01:18, hash: 16fc62e15f0 Worked: Making a shortcut for duplicate collection using shift+D works without any problem. Doing the same command on any object within the collection causes the program to shut down immediately. Was trying to make new shortcuts in Blender 2.80. When I got to doing the outliner shortcuts the entire program shut down when using shift+D on an object inside the outliner window after adding a duplicate shortcut for the collections. **Exact steps for others to reproduce the error** Just open up a default scene with a cube, camera, and light source. Go to the outliner, select any of these objects, and then press shift+D. Program should be shutting down from this. On a final note, it would be nice if you could inside the outliner use copy, paste, duplicate, and duplicate linked on any object inside the outliner like in the 3D view windows. That includes adding these into the R click window when opening up a context menu for the outliner. **Edit:** I downloaded the latest version and I still got the same problem. However, I just realized I skipped another step in the process. You in fact need to assign a shortcut command for **duplicate collection** by R clicking a collection, then R click again on the **duplicate** button, assign a hotkey, and then you click on any object in your scene and do the stuff I mentioned in the original post. Was able to replicate this on two separate Windows computers which had Windows 7 and 10 installed respectively.

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight

Added subscriber: @brhumphe

Added subscriber: @brhumphe

Could not replicate on 2edd32c168 on windows 10.

Could not replicate on 2edd32c168d3 on windows 10.

In #60248#594984, @brhumphe wrote:
Could not replicate on 2edd32c168 on windows 10.

I downloaded the latest version and I still got the same problem. However, I just realized I skipped another step in the process. You in fact need to assign a shortcut command for duplicate collection by R clicking a collection, then R click again on the duplicate button, assign a hotkey, and then you click on any object in your scene and do the stuff I mentioned in the original post.

Was able to replicate this on two separate Windows computers which had Windows 7 and 10 installed respectively.

> In #60248#594984, @brhumphe wrote: > Could not replicate on 2edd32c168d3 on windows 10. I downloaded the latest version and I still got the same problem. However, I just realized I skipped another step in the process. You in fact need to assign a shortcut command for **duplicate collection** by R clicking a collection, then R click again on the **duplicate** button, assign a hotkey, and then you click on any object in your scene and do the stuff I mentioned in the original post. Was able to replicate this on two separate Windows computers which had Windows 7 and 10 installed respectively.

This issue was referenced by af4ab8c6a1

This issue was referenced by af4ab8c6a1d73eec4adce9a5847b1780cc39f2f6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60248
No description provided.