Fix T60248: Crash duplicating collections